# translator

./: CMakeLists.txt  README.md  stdvector.h  table.h
include/: HashTable.h  TableT.h  TreeT.h  expression_check.h  hash_table.h  list.hpp  monome.h  polynome.h  queue.h  solve_expr.h  stack.h  state.h  stdvector.hpp  table.h  tree.h
samples/: main.cpp
test/: test_main.cpp  test_polynomes.cpp  test_queue.cpp  test_stack.cpp  test_tables.cpp  translate_test.cpp
